[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/zone_mapper/UI/Components/ZoneControl.gd" type="Script" id=1]

[node name="ZoneControl" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="ZoneList" type="HBoxContainer" parent="VBC"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="ZoneIndexDrop" type="OptionButton" parent="VBC/ZoneList"]
margin_right = 992.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Select a Zone"

[node name="RemoveZone" type="Button" parent="VBC/ZoneList"]
margin_left = 996.0
margin_right = 1008.0
margin_bottom = 20.0

[node name="AddZone" type="Button" parent="VBC/ZoneList"]
margin_left = 1012.0
margin_right = 1024.0
margin_bottom = 20.0

[node name="ZoneSettings" type="GridContainer" parent="VBC"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 76.0
columns = 2

[node name="Label" type="Label" parent="VBC/ZoneSettings"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 19.0
text = "Floor Height: "

[node name="FloorHeight" type="LineEdit" parent="VBC/ZoneSettings"]
margin_left = 101.0
margin_right = 159.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="VBC/ZoneSettings"]
margin_top = 33.0
margin_right = 97.0
margin_bottom = 47.0
text = "Ceiling Height: "

[node name="CeilingHeight" type="LineEdit" parent="VBC/ZoneSettings"]
margin_left = 101.0
margin_top = 28.0
margin_right = 159.0
margin_bottom = 52.0
